--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -1,3 +1,9 @@
-# FROM node:16.14-alpine
-# WORKDIR /app-backend
-#  ...
+FROM node:16.14-alpine
+WORKDIR /app-backend
+EXPOSE 3001
+COPY package*.json .
+RUN npm install
+COPY . .
+# RUN npm run build
+# CMD ["npm", "run", "dev"]
+CMD ["npm", "start"]
